[gd_scene load_steps=3 format=3 uid="uid://di1tj2dupr7f3"]

[ext_resource type="Script" uid="uid://bcmqrnatschv" path="res://scenes/menus/direct_connect_menu.gd" id="1_u0bfx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ppba"]
bg_color = Color(0, 0, 0, 0.33333334)

[node name="DirectConnectMenu" type="CanvasLayer"]
script = ExtResource("1_u0bfx")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ppba")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Ip Address"
fit_content = true

[node name="TextEdit" type="TextEdit" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
placeholder_text = "127.0.0.1"
scroll_fit_content_height = true
scroll_fit_content_width = true

[node name="ErrorMessage" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 28)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.99999994, 0.1943762, 0.14415282, 1)
text = "<insert error here>"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubmitButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Join"

[node name="CancelButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"
